Fix restart and start buttons and score on one minute timer when on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -484,6 +484,7 @@ body {
 .one-minute-timer-options {
   display: flex;
   justify-content: end;
+  margin-left: 30px;
 }
 
 .note-input-field-container .input-button-container {
@@ -914,10 +915,6 @@ body {
     margin-top: 15px;
   }
 
-  .note-input-field-container {
-    margin-top: 15px;
-  }
-
   .learn-notes-container {
     margin-top: 150px;
   }
@@ -1054,7 +1051,7 @@ body {
   }
 
   .learn-notes-container {
-    margin-top: 35px;
+    margin-top: 80px;
   }
 
   .animations-container {
@@ -1072,11 +1069,20 @@ body {
 
   .score-container {
     width: auto;
-    padding: 0px 50px;
+    padding: 0px 30px;
   }
 
   .score {
-    font-size: 22px;
+    font-size: 20px;
+  }
+
+  .time-remaining {
+    letter-spacing: 2px;
+    font-size: 20px;
+    font-weight: 600;
+    margin: 0;
+    margin-right: 0px;
+    padding: 6px 0;
   }
 
   .one-minute-timer-options-container {
